Add Flutter TTS integration and update dependencies

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,21 @@
 	<string>Recognize and display speech input</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Detect speech input</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+<string>This app uses speech recognition to convert your speech to text.</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>This app uses the microphone to record your speech.</string>
+<key>NSBluetoothPeripheralUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
+<key>NSBluetoothAlwaysUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
+<key>NSBluetoothPeripheralUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
+<key>NSBluetoothAlwaysUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
+<key>NSBluetoothPeripheralUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
+<key>NSBluetoothAlwaysUsageDescription</key>
+<string>This app uses Bluetooth to connect to external devices.</string>
 </dict>
 </plist>
